# type_conversion

./: CMakeLists.txt  LICENSE  README.md  TODO  conanfile.txt  conversion.hpp  main.cpp  type_conversion.hpp
benchmark/: CMakeLists.txt  benchmark.cpp  foo_to_from_string.hpp
profiling/: CMakeLists.txt  profiling.cpp  time_it.hpp
test/: CMakeLists.txt  test.cpp
type_conversion/: CMakeLists.txt
type_conversion/include/: type_conversion.hpp
